# CaCaBiGroup

./: .gitignore  CMakeLists.txt  ErrorCodes.h  ListAVDevices.cpp  ListAVDevices.h  README.md  ScreenAudioCapture.cpp  ScreenAudioCapture.h  ScreenRecord.cpp  ScreenRecord.h  ScreenRecordErrors.h  compile.sh  exec.sh  exec_macos.sh  exec_win.sh  ffmpeg.h  install.sh  istruzioni_ffmpeg_windows.txt  main  main.cpp
include/libavutil/: error.h  ffversion.h
lib/: avutil-57.def
lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
main.dSYM/Contents/Resources/DWARF/: main
